styles.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Poppins", sans-serif;
  font-size: 15px;
  background-color: hsl(0, 0%, 98%);
  line-height: 1.5;
}

.main {
  margin: 60px auto;
  text-align: center;
}

.thin-header {
  font-weight: 200;
  color: hsl(234, 12%, 34%);
  font-size: 30px;
}

.bold-header {
  font-weight: 600;
  color: hsl(234, 12%, 34%);
  margin-bottom: 10px;
  font-size: 30px;
}

.main-text {
  font-weight: 400;
  color: hsl(229, 6%, 66%);
}

.title {
  color: hsl(234, 12%, 34%);
  font-weight: 700;
  margin-bottom: 20px;
  font-size: 18px;
}

.description {
  font-weight: 400;
  color: hsl(229, 6%, 66%);
}

.content {
  width: 100%;
  margin: 0 auto;
}

.columns {
  display: flex;
  padding: 30px;
  justify-content: center;
  align-items: center;
  gap: 35px;
}

.rows {
  display: flex;
  flex-direction: column;
  gap: 35px;
}

.icons {
  margin-top: 60px;
  display: flex;
}

.card {
  box-shadow: 0px 11px 24px 3px hsl(229, 6%, 66%);
  border-radius: 6px;
  padding: 30px;
  height: 280px;
  width: 380px;
}

.border-top-green {
  border-top: 3px solid hsl(180, 62%, 55%);
}

.border-top-red {
  border-top: 3px solid hsl(0, 78%, 62%);
}

.border-top-yellow {
  border-top: 3px solid hsl(34, 97%, 64%);
}

.border-top-blue {
  border-top: 3px solid hsl(212, 86%, 64%);
}

.flex-end {
  display: flex;
  justify-content: end;
  width: 100%;
}

.page {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  min-height: 100vh;
}

@media (max-width: 1280px) {
  .columns {
    flex-direction: column;
  }

  .content {
    padding: 0 30px;
  }
}

